// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Surfaces/Card Actions smoke-test 1`] = `
<div class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 MuiCard-root css-mui-classname"
     data-cy="card"
     style="margin: 16px; width: calc(100% - 32px);"
>
  <div class="MuiCardHeader-root css-mui-classname">
    <div class="MuiCardHeader-content css-mui-classname">
      <h2 class="MuiTypography-root MuiTypography-h6 MuiTypography-noWrap css-mui-classname"
          data-cy="card-title"
      >
        Mosaic
      </h2>
      <span class="MuiTypography-root MuiTypography-caption MuiTypography-noWrap css-mui-classname"
            data-cy="card-subtitle"
      >
        UK: /mə(ʊ)ˈzeɪɪk/
      </span>
    </div>
  </div>
  <div class="MuiCardContent-root css-mui-classname"
       data-cy="card-content"
       style="padding: 8px 16px;"
  >
    A mosaic is an artistic picture or design made out of any materials assembled together.
  </div>
  <div class="MuiCardActions-root css-mui-classname"
       style="align-items: center; display: flex; justify-content: space-between; padding: 8px 16px;"
  >
    <div style="align-items: center; display: flex;">
      <div style="margin-right: 16px;">
        <button class="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-colorPrimary MuiButton-disableElevation MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-colorPrimary MuiButton-disableElevation css-mui-classname"
                tabindex="0"
                type="button"
                data-cy="button"
        >
          <span class="MuiButton-icon MuiButton-startIcon MuiButton-iconSizeMedium css-mui-classname">
            <svg class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-mui-classname"
                 focusable="false"
                 aria-hidden="true"
                 viewbox="0 0 24 24"
                 data-testid="OpenInNewIcon"
                 data-cy="button-icon"
            >
              <path d="M19 19H5V5h7V3H5c-1.11 0-2 .9-2 2v14c0 1.1.89 2 2 2h14c1.1 0 2-.9 2-2v-7h-2zM14 3v2h3.59l-9.83 9.83 1.41 1.41L19 6.41V10h2V3z">
              </path>
            </svg>
          </span>
          Gallery
          <span class="MuiTouchRipple-root css-mui-classname">
          </span>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Surfaces/Card Collapsible play-test 1`] = `
<div class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 MuiCard-root css-mui-classname"
     data-cy="card"
     style="margin: 16px; width: calc(100% - 32px);"
>
  <div class="MuiCardHeader-root css-mui-classname">
    <div class="MuiCardHeader-content css-mui-classname">
      <h2 class="MuiTypography-root MuiTypography-h6 MuiTypography-noWrap css-mui-classname"
          data-cy="card-title"
      >
        Mosaic
      </h2>
      <span class="MuiTypography-root MuiTypography-caption MuiTypography-noWrap css-mui-classname"
            data-cy="card-subtitle"
      >
        UK: /mə(ʊ)ˈzeɪɪk/
      </span>
    </div>
  </div>
  <div class="MuiCardContent-root css-mui-classname"
       data-cy="card-content"
       style="padding: 8px 16px;"
  >
    A mosaic is an artistic picture or design made out of any materials assembled together.
  </div>
  <div class="MuiCardActions-root css-mui-classname"
       style="align-items: center; display: flex; justify-content: space-between; padding: 8px 16px;"
  >
    <button class="MuiButtonBase-root MuiIconButton-root MuiIconButton-colorInherit MuiIconButton-sizeMedium css-mui-classname"
            tabindex="0"
            type="button"
            data-cy="card-collapse"
    >
      <svg class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-mui-classname"
           focusable="false"
           aria-hidden="true"
           viewbox="0 0 24 24"
           data-testid="KeyboardArrowUpIcon"
           data-cy="card-collapse-icon"
      >
        <path d="M7.41 15.41 12 10.83l4.59 4.58L18 14l-6-6-6 6z">
        </path>
      </svg>
      <span class="MuiTouchRipple-root css-mui-classname">
      </span>
    </button>
  </div>
  <div class="MuiCollapse-root MuiCollapse-vertical MuiCollapse-entered css-mui-classname"
       style="min-height: 0px; height: auto; transition-duration: 196ms;"
  >
    <div class="MuiCollapse-wrapper MuiCollapse-vertical css-mui-classname">
      <div class="MuiCollapse-wrapperInner MuiCollapse-vertical css-mui-classname">
        <div class="MuiCardContent-root css-mui-classname"
             data-cy="card-collapsible-content"
             style="padding: 8px 16px;"
        >
          Discover mosaics from all around the globe!
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Surfaces/Card CollapsibleActions smoke-test 1`] = `
<div class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 MuiCard-root css-mui-classname"
     data-cy="card"
     style="margin: 16px; width: calc(100% - 32px);"
>
  <div class="MuiCardHeader-root css-mui-classname">
    <div class="MuiCardHeader-content css-mui-classname">
      <h2 class="MuiTypography-root MuiTypography-h6 MuiTypography-noWrap css-mui-classname"
          data-cy="card-title"
      >
        Mosaic
      </h2>
      <span class="MuiTypography-root MuiTypography-caption MuiTypography-noWrap css-mui-classname"
            data-cy="card-subtitle"
      >
        UK: /mə(ʊ)ˈzeɪɪk/
      </span>
    </div>
  </div>
  <div class="MuiCardContent-root css-mui-classname"
       data-cy="card-content"
       style="padding: 8px 16px;"
  >
    A mosaic is an artistic picture or design made out of any materials assembled together.
  </div>
  <div class="MuiCardActions-root css-mui-classname"
       style="align-items: center; display: flex; justify-content: space-between; padding: 8px 16px;"
  >
    <div style="align-items: center; display: flex;">
      <div style="margin-right: 16px;">
        <button class="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-colorPrimary MuiButton-disableElevation MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-colorPrimary MuiButton-disableElevation css-mui-classname"
                tabindex="0"
                type="button"
                data-cy="button"
        >
          <span class="MuiButton-icon MuiButton-startIcon MuiButton-iconSizeMedium css-mui-classname">
            <svg class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-mui-classname"
                 focusable="false"
                 aria-hidden="true"
                 viewbox="0 0 24 24"
                 data-testid="OpenInNewIcon"
                 data-cy="button-icon"
            >
              <path d="M19 19H5V5h7V3H5c-1.11 0-2 .9-2 2v14c0 1.1.89 2 2 2h14c1.1 0 2-.9 2-2v-7h-2zM14 3v2h3.59l-9.83 9.83 1.41 1.41L19 6.41V10h2V3z">
              </path>
            </svg>
          </span>
          Gallery
          <span class="MuiTouchRipple-root css-mui-classname">
          </span>
        </button>
      </div>
    </div>
    <button class="MuiButtonBase-root MuiIconButton-root MuiIconButton-colorInherit MuiIconButton-sizeMedium css-mui-classname"
            tabindex="0"
            type="button"
            data-cy="card-collapse"
    >
      <svg class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-mui-classname"
           focusable="false"
           aria-hidden="true"
           viewbox="0 0 24 24"
           data-testid="KeyboardArrowDownIcon"
           data-cy="card-collapse-icon"
      >
        <path d="M7.41 8.59 12 13.17l4.59-4.58L18 10l-6 6-6-6z">
        </path>
      </svg>
      <span class="MuiTouchRipple-root css-mui-classname">
      </span>
    </button>
  </div>
  <div class="MuiCollapse-root MuiCollapse-vertical MuiCollapse-hidden css-mui-classname"
       style="min-height: 0px;"
  >
    <div class="MuiCollapse-wrapper MuiCollapse-vertical css-mui-classname">
      <div class="MuiCollapse-wrapperInner MuiCollapse-vertical css-mui-classname">
        <div class="MuiCardContent-root css-mui-classname"
             data-cy="card-collapsible-content"
             style="padding: 8px 16px;"
        >
          Discover mosaics from all around the globe!
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Surfaces/Card Icon smoke-test 1`] = `
<div class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 MuiCard-root css-mui-classname"
     data-cy="card"
     style="margin: 16px; width: calc(100% - 32px);"
>
  <div class="MuiCardHeader-root css-mui-classname">
    <div class="MuiCardHeader-avatar css-mui-classname">
      <div class="MuiAvatar-root MuiAvatar-circular MuiAvatar-colorDefault css-mui-classname"
           data-cy="card-avatar"
           style="background-color: rgb(25, 118, 210); color: rgb(255, 255, 255);"
      >
        <svg class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-mui-classname"
             focusable="false"
             aria-hidden="true"
             viewbox="0 0 24 24"
             data-testid="AppsIcon"
             data-cy="card-avatar-icon"
        >
          <path d="M4 8h4V4H4zm6 12h4v-4h-4zm-6 0h4v-4H4zm0-6h4v-4H4zm6 0h4v-4h-4zm6-10v4h4V4zm-6 4h4V4h-4zm6 6h4v-4h-4zm0 6h4v-4h-4z">
          </path>
        </svg>
      </div>
    </div>
    <div class="MuiCardHeader-content css-mui-classname">
      <h2 class="MuiTypography-root MuiTypography-h6 MuiTypography-noWrap css-mui-classname"
          data-cy="card-title"
      >
        Mosaic
      </h2>
      <span class="MuiTypography-root MuiTypography-caption MuiTypography-noWrap css-mui-classname"
            data-cy="card-subtitle"
      >
        UK: /mə(ʊ)ˈzeɪɪk/
      </span>
    </div>
  </div>
  <div class="MuiCardContent-root css-mui-classname"
       data-cy="card-content"
       style="padding: 8px 16px;"
  >
    A mosaic is an artistic picture or design made out of any materials assembled together.
  </div>
  <div class="MuiCardActions-root css-mui-classname"
       style="align-items: center; display: flex; justify-content: space-between; padding: 8px 16px;"
  >
  </div>
</div>
`;

exports[`Surfaces/Card Loading smoke-test 1`] = `
<div class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 MuiCard-root css-mui-classname"
     data-cy="card"
     style="margin: 16px; width: calc(100% - 32px);"
>
  <div class="MuiCardHeader-root css-mui-classname">
    <div class="MuiCardHeader-avatar css-mui-classname">
      <span class="MuiSkeleton-root MuiSkeleton-circular MuiSkeleton-pulse MuiSkeleton-withChildren MuiSkeleton-fitContent MuiSkeleton-heightAuto css-mui-classname">
        <div class="MuiAvatar-root MuiAvatar-circular MuiAvatar-colorDefault css-mui-classname"
             data-cy="card-avatar-loading"
        >
          <svg class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium MuiAvatar-fallback css-mui-classname"
               focusable="false"
               aria-hidden="true"
               viewbox="0 0 24 24"
               data-testid="PersonIcon"
          >
            <path d="M12 12c2.21 0 4-1.79 4-4s-1.79-4-4-4-4 1.79-4 4 1.79 4 4 4zm0 2c-2.67 0-8 1.34-8 4v2h16v-2c0-2.66-5.33-4-8-4z">
            </path>
          </svg>
        </div>
      </span>
    </div>
    <div class="MuiCardHeader-content css-mui-classname">
      <h2 class="MuiTypography-root MuiTypography-h6 MuiTypography-noWrap css-mui-classname"
          data-cy="card-title-loading"
      >
        <span class="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse css-mui-classname">
        </span>
      </h2>
      <span class="MuiTypography-root MuiTypography-caption MuiTypography-noWrap css-mui-classname"
            data-cy="card-subtitle-loading"
      >
        <span class="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse css-mui-classname">
        </span>
      </span>
    </div>
  </div>
  <div class="MuiCardContent-root css-mui-classname"
       data-cy="card-content"
       style="padding: 8px 16px;"
  >
    <span class="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse css-mui-classname"
          style="height: 128px;"
    >
    </span>
  </div>
</div>
`;

exports[`Surfaces/Card Localized smoke-test 1`] = `
<div class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 MuiCard-root css-mui-classname"
     data-cy="locale.title"
     style="margin: 16px; width: calc(100% - 32px);"
>
  <div class="MuiCardHeader-root css-mui-classname">
    <div class="MuiCardHeader-content css-mui-classname">
      <h2 class="MuiTypography-root MuiTypography-h6 MuiTypography-noWrap css-mui-classname"
          data-cy="locale.title-title"
      >
        Titolo
      </h2>
      <span class="MuiTypography-root MuiTypography-caption MuiTypography-noWrap css-mui-classname"
            data-cy="locale.title-subtitle"
      >
        Sottotitolo
      </span>
    </div>
  </div>
  <div class="MuiCardContent-root css-mui-classname"
       data-cy="locale.title-content"
       style="padding: 8px 16px;"
  >
    A mosaic is an artistic picture or design made out of any materials assembled together.
  </div>
  <div class="MuiCardActions-root css-mui-classname"
       style="align-items: center; display: flex; justify-content: space-between; padding: 8px 16px;"
  >
  </div>
</div>
`;

exports[`Surfaces/Card Primary smoke-test 1`] = `
<div class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 MuiCard-root css-mui-classname"
     data-cy="card"
     style="margin: 16px; width: calc(100% - 32px);"
>
  <div class="MuiCardHeader-root css-mui-classname">
    <div class="MuiCardHeader-content css-mui-classname">
      <h2 class="MuiTypography-root MuiTypography-h6 MuiTypography-noWrap css-mui-classname"
          data-cy="card-title"
      >
        Mosaic
      </h2>
      <span class="MuiTypography-root MuiTypography-caption MuiTypography-noWrap css-mui-classname"
            data-cy="card-subtitle"
      >
        UK: /mə(ʊ)ˈzeɪɪk/
      </span>
    </div>
  </div>
  <div class="MuiCardContent-root css-mui-classname"
       data-cy="card-content"
       style="padding: 8px 16px;"
  >
    A mosaic is an artistic picture or design made out of any materials assembled together.
  </div>
  <div class="MuiCardActions-root css-mui-classname"
       style="align-items: center; display: flex; justify-content: space-between; padding: 8px 16px;"
  >
  </div>
</div>
`;
